<resources>
    <string name="app_name">Repartos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="txt_zonas">Zonas</string>
    <string name="txt_clientes">Clientes</string>
    <string name="txt_pedidos">Pedidos</string>
    <string name="txt_productos">Productos</string>
    <string name="txt_email">Enviar email</string>
    <string name="txt_menu">Menú</string>
    <string name="txt_comunicaciones">Comunicaciones</string>
    <string name="btn_volver">Volver</string>
    <string name="mostrar_zonas">Mostrar Zonas</string>
    <string name="agregar_zonas">Agregar zonas</string>
    <string name="editar_zonas">Editar Zonas</string>
    <string name="eliminar">Eliminar</string>
    <string name="txt_nom_zona">Nombre de la zona:</string>
    <string name="guardar">Guardar</string>
    <string name="modificar_zona">Modificar zona</string>
    <string name="eliminar_zona">Eliminar zona</string>
    <string name="iconoZona">Icono de Zona</string>
    <string name="txt_titulo_alerta">Atención</string>
    <string name="txt_texto_alerta">¿Estás seguro de que quieres eliminar el registro?</string>
    <string name="txt_item_borrado">El registro ha sido eliminado</string>
    <string name="txt_boton_no">Cancelar</string>
    <string name="txt_btn_aceptar">Aceptar</string>
    <string name="mostrar_clientes">Mostrar Clientes</string>
    <string name="agregar_clientes">Agregar clientes</string>
    <string name="modificar_cliente">Modificar cliente</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="txt_nombre_cliente">Nombre Cliente</string>
    <string name="res_icono_cliente">Icono cliente</string>
    <string name="res_icono_contacto">Icono contacto</string>
    <string name="hint_contacto">Contacto</string>
    <string name="res_direccion">Icono Direccion</string>
    <string name="hint_direccion">Dirección</string>
    <string name="res_telefono">Icono teléfono</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="res_icono_correo">Icono correo</string>
</resources>
