<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/txt_pedidos" />
        <item
            android:id="@+id/nav_zonas"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/txt_zonas" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/txt_clientes" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/txt_productos" />
    </group>

    <item android:title="@string/txt_comunicaciones">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/txt_email" />
        </menu>
    </item>

</menu>
