<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="es.jspsoluciones.repartos.zonasFragment"
    android:id="@+id/zonasfragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonVerZonas"
            android:layout_gravity="left|top"
            android:src="@drawable/ic_visibility_white_48dp"
            android:layout_weight="1"
            android:contentDescription="@string/mostrar_zonas" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonAgregarZonas"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/ic_add_location_white_48dp"
            android:layout_weight="1"
            android:contentDescription="@string/agregar_zonas" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonEditarZonas"
            android:layout_gravity="right|top"
            android:src="@drawable/ic_edit_location_white_48dp"
            android:layout_weight="1"
            android:contentDescription="@string/editar_zonas" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonBorrarZonas"
            android:src="@drawable/ic_delete_white_48dp"
            android:layout_weight="1"
            android:contentDescription="@string/eliminar" />
    </LinearLayout>
</LinearLayout>
