<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zonas.IntroducirDatosZonasFragment"
    android:background="@color/material_grey_600"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/agregar_zonas"
            android:id="@+id/textView2"
            android:textColor="#ffffff"
            android:textIsSelectable="false"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_nom_zona"
            android:id="@+id/textView3"
            style="@style/Base.TextAppearance.AppCompat.Title.Inverse"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_nom_zona"
            android:editable="false"
            android:inputType="text"
            android:layout_gravity="left"
            android:layout_margin="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:id="@+id/btn_guardar_agregar_zona"
            android:background="#13cb16"
            android:layout_marginBottom="46dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>
